@startuml
'https://plantuml.com/class-diagram
package road {
    class Road {
        + Road( std::vector<Point> road )
        - std::vector<Point> points_
    }

    class RoadGenerator {
        + Road generateRoad()
        # virtual Road generateRoadImpl() const = 0
    }

    class StaticRoadGenerator {
        + StaticRoadGenerator( const std::vector<Point>& points )
        # Road generateRoadImpl() const override
        - std::vector<Point> points_
    }

    class PerlinRoadGenerator {
        + PerlinRoadGenerator( int length, int grid_size, int layers, float scale_y, float scale_x )
        # Road generateRoadImpl() const override
        - int length_
        - int grid_size_
        - int layers_
        - float scale_y_
        - float scale_x_
    }

    RoadGenerator <|-- StaticRoadGenerator
    RoadGenerator <|-- PerlinRoadGenerator
}
@enduml